# ChangeLog for games-emulation/gens-gs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7-r1.ebuild,
  gens-gs-7-r2.ebuild:
  Fixed repoman warnings.

*gens-gs-7-r2 (28 Sep 2011)

  28 Sep 2011; Michał Ziąbkowski <mziab@o2.pl> +gens-gs-7-r2.ebuild:
  Fixed build with new zlib.

  22 Aug 2011; Michał Ziąbkowski <mziab@o2.pl> gens-gs-9999.ebuild:
  Migrated to git-2.eclass.

*gens-gs-7-r1 (13 Mar 2011)

  13 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +gens-gs-7-r1.ebuild,
  +files/gtk_build_fix.patch:
  Bumped with build workaround with newer gtk+ versions.

*gens-gs-9999 (22 Feb 2010)

  22 Feb 2010; Michał Ziąbkowski <mziab@o2.pl> +gens-gs-9999.ebuild:
  Added live git ebuild.

  29 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7.ebuild:
  Style fixes.

  04 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -gens-gs-7_pre4.ebuild,
  -gens-gs-7_pre5.ebuild, +gens-gs-7.ebuild:
  Bumped. Added debug flag. Removed cruft.

  14 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7_pre4.ebuild,
  gens-gs-7_pre5.ebuild:
  Changed SRC_URI to save some trouble in the future.

  12 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7_pre4.ebuild,
  +gens-gs-7_pre5.ebuild:
  Bumped. Some clean-up.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7_pre4.ebuild,
  +metadata.xml:
  Fixed deps and added metadata.xml.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +gens-gs-7_pre4.ebuild:
  Initial ebuild.
