@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/gens-gs
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Jan 2015; Michał Ziąbkowski <mziab@o2.pl> -gens-gs-9999.ebuild:
+  Removed live ebuild. Repo seems to be dead.
 
   08 Jun 2013; Michał Ziąbkowski <mziab@o2.pl> gens-gs-7-r1.ebuild,
   gens-gs-7-r2.ebuild:
